[JSC]Throw consistent exceptions for memory.init and memory.copy https://bugs.webkit.org/show_bug.cgi?id=239592

Patch by Geza Lore <glore@igalia.com> on 2022-04-22
Reviewed by Yusuke Suzuki.

For a trapping Wasm memory.init and memory.copy instruction, the LLInt
used to throw OutOfBoundsMemoryAccess, but BBQ/OMG used to throw
OutOfBoundsTableAccess.

Changed BBQ/OMG to throw OutOfBoundsMemoryAccess as well.

* wasm/WasmAirIRGenerator.cpp:
(JSC::Wasm::AirIRGenerator::addMemoryCopy):
(JSC::Wasm::AirIRGenerator::addMemoryInit):
* wasm/WasmB3IRGenerator.cpp:
(JSC::Wasm::B3IRGenerator::addMemoryInit):
(JSC::Wasm::B3IRGenerator::addMemoryCopy):

Canonical link: https://commits.webkit.org/249901@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@293252 268f45cc-cd09-0410-ab3c-d52691b4dbfc